// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert UI snapshots renders a default alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-7 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332E54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width:768px) {
  .emotion-7 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-1 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-7 emotion-8"
  onClick={[Function]}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
    >
      <svg
        className="emotion-0"
        fill="#FFFFFF"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.52 2a1 1 0 100-2 1 1 0 000 2zM8.55 14.73V4.74L6 4.73v1.25h1.3v8.75H6v1.25h3.85v-1.25h-1.3z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders a sticky alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-7 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332E54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width:768px) {
  .emotion-7 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-1 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-7 emotion-8"
  onClick={[Function]}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
    >
      <svg
        className="emotion-0"
        fill="#FFFFFF"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.52 2a1 1 0 100-2 1 1 0 000 2zM8.55 14.73V4.74L6 4.73v1.25h1.3v8.75H6v1.25h3.85v-1.25h-1.3z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders custom component passed in content prop 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-7 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #332E54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width:768px) {
  .emotion-7 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-1 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

<button
  className="emotion-7 emotion-8"
  onClick={[Function]}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
    >
      <svg
        className="emotion-0"
        fill="#FFFFFF"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.52 2a1 1 0 100-2 1 1 0 000 2zM8.55 14.73V4.74L6 4.73v1.25h1.3v8.75H6v1.25h3.85v-1.25h-1.3z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      <div>
        <strong>
          Your info is updated!
        </strong>
         
        <a
          href="curology.com"
        >
           Click here to see changes
        </a>
      </div>
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders error alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-1 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

.emotion-7 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #BD200F;
  box-shadow: 0px 8px 24px rgba(189,32,15,0.05);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width:768px) {
  .emotion-7 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

<button
  className="emotion-7 emotion-8"
  onClick={[Function]}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
    >
      <svg
        className="emotion-0"
        fill="#FFFFFF"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M14.6 6.79a6.747 6.747 0 00-7.9-5.36 6.7 6.7 0 00-4.31 2.84 6.71 6.71 0 00-1.04 5.06 6.747 6.747 0 007.9 5.36 6.7 6.7 0 004.31-2.84 6.71 6.71 0 001.04-5.06zM6.46.2C6.97.11 7.48.06 7.98.06a7.996 7.996 0 011.5 15.85c-.51.09-1.02.14-1.52.14-3.76 0-7.12-2.66-7.85-6.49A7.996 7.996 0 016.46.2zm.86 3.91h1.41v5.26H7.32V4.11zm-.17 6.83c0-.48.39-.84.88-.84s.88.36.88.84c0 .49-.39.86-.88.86s-.88-.37-.88-.86z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;

exports[`Alert UI snapshots renders success alert 1`] = `
@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-0 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(0,-24px,0);
    -ms-transform: translate3d(0,-24px,0);
    transform: translate3d(0,-24px,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0px,0);
    -ms-transform: translate3d(0,0px,0);
    transform: translate3d(0,0px,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

@keyframes animation-1 {
  from {
    opacity: 0;
    -webkit-transform: translate3d(24px,0,0);
    -ms-transform: translate3d(24px,0,0);
    transform: translate3d(24px,0,0);
  }

  to {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #FFFFFF;
  font-size: 0.875rem;
  padding: 1rem;
}

.emotion-1 svg {
  height: 1rem;
  width: 1rem;
  fill: #FFFFFF;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  color: #FFFFFF;
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-3 {
  margin: -3px 0 0 1rem;
  max-height: none;
}

.emotion-7 {
  border: none;
  text-align: left;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 0;
  width: 327px;
  border-radius: 0.5rem;
  opacity: 1;
  -webkit-animation: animation-0 350ms 1;
  animation: animation-0 350ms 1;
  -webkit-transition: 350ms;
  transition: 350ms;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  background-color: #2B6E33;
  box-shadow: 0px 8px 24px rgba(43,110,51,0.05);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

@media (min-width:768px) {
  .emotion-7 {
    -webkit-animation: animation-1 350ms 1;
    animation: animation-1 350ms 1;
    margin: 0 auto 1rem;
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }
}

<button
  className="emotion-7 emotion-8"
  onClick={[Function]}
>
  <div
    className="emotion-5 emotion-6"
  >
    <div
      className="emotion-1 emotion-2"
    >
      <svg
        className="emotion-0"
        fill="#FFFFFF"
        height={16}
        viewBox="0 0 16 16"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.96 2l-9.7 9.42L.88 7.1 0 7.99l5.26 5.18L15.83 2.9l-.87-.9z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="emotion-3 emotion-4"
    >
      Your email address was updated successfully!
    </div>
  </div>
</button>
`;
